Edit class names for reuse

--- a/events.html
+++ b/events.html
@@ -7,6 +7,8 @@
     <meta name="author" content="Darragh Coleman">
     <meta name="description" content="Obscure and dark Irish history website">
     <meta name="keywords" content="eire dubh, irish, history, obscure, dark, irish diaspora, emigrants">
+    
+    <script src="https://kit.fontawesome.com/ao765d05399.js" crossorigin="anonymous"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Uncial+Antiqua&display=swap">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -35,12 +37,12 @@
         </nav>
 
         <section>
-            <div class="container">
-                <img src="assets/images/darkhedges.jpg" alt="A picture of the dark hedges in Northern Ireland">
+            <div class="banner">
+                <img src="assets/images/diasporaColor.svg" alt="A picture of the dark hedges in Northern Ireland">
             </div>
         </section>
 
-        <div id="diaspora-text">
+        <!--<div id="diaspora-text">
             <p>As a once gone and once returned Irish emigrant myself, I have found a fascination in the 
                 paths of other Irish across the globe and what brought them there.
                 With the most remote Irish pubs not being in Donegal, the Kerry mountains or Aran Islands,
@@ -104,7 +106,7 @@
                 In addition to the above countries, today many Irish people are deciding to settle in the Middle-East, South-East Asia and the Mediterranean.
                 Times may have changed, but Éire Dubh will still always have articles to write...
             </p>
-        </div>
+        </div>-->
 </body>
 
 </html>
