--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </section>
 
-        <section class="about">
+        <section class="container-one">
             <div id="about-text">
                 <h2 style="text-align: center;">About</h2>
                 <br>
@@ -68,11 +68,11 @@
             
         </section>
 
-        <section class="diaspora">
+        <section class="container-two">
             <div>
                 <img src="assets/images/irishMigrationMap1.jpg" alt="">
             </div>
-            <div class="diaspora-text">
+            <div id="diaspora-text">
                 <h2 style="text-align: center;">The Diaspora</h2>
                 <hr>
                 <p>A small island with a big footprint.</p>
