Add events.html boilerplate, meta, layout

--- a/events.html
+++ b/events.html
@@ -37,10 +37,38 @@
         </nav>
 
         <section>
-            <div class="banner">
+            <div class="banner-events">
                 <img src="assets/images/diasporaColor.svg" alt="A picture of the dark hedges in Northern Ireland">
             </div>
+            <div class="banner-events-text">
+                <h4>There are 13 times as many people who identify as Irish as there are in Ireland.</h4>
+            </div>
         </section>
+
+        <section class="container-one">
+            <div>
+                <p>As a once gone and once returned emigrant myself, it is fascinating to hear the 
+                    paths of other Irish emigrants' experiences and what brought them there.</p>
+                <br>
+                <p>The vast majority of Irish emigrants today are young, well-educated and skilled people 
+                    coming from an affluent country. They leave seeking opportunity, adventure or education abroad.</p>
+                <br>
+                <p>However, this was not always the case as our ancestors did not have such privilages coming from
+                    extremely impoverished circumstances. Many went from poverty in Ireland to poverty in a new land.
+                    Even worse still, many were exiled for their religion or political beliefs and forced into
+                    a life of servitude or slavery.</p>
+                <br>
+                <p>Often Irish communities abroad were treated with disdain and discrimination. Therefore, it's important to 
+                    to consider the circumstances which led to the making of a some of our featured forgotten friends.
+                </p>
+            </div>
+            <img src="assets/images/no_irish.jpg" alt="">
+        </section>
+
+        <section class="container-two">
+
+        </section>
+
 
         <!--<div id="diaspora-text">
             <p>As a once gone and once returned Irish emigrant myself, I have found a fascination in the 
