--- a/events.html
+++ b/events.html
@@ -51,22 +51,87 @@
                     paths of other Irish emigrants' experiences and what brought them there.</p>
                 <br>
                 <p>The vast majority of Irish emigrants today are young, well-educated and skilled people 
-                    coming from an affluent country. They leave seeking opportunity, adventure or education abroad.</p>
+                    coming from an affluent country. They leave seeking opportunity, adventure or education abroad.
+                    With internet and travel accessibility now it's relative easy for emigrants to keep in touch
+                    with loved ones and to take trips home.</p>
                 <br>
                 <p>However, this was not always the case as our ancestors did not have such privilages coming from
                     extremely impoverished circumstances. Many went from poverty in Ireland to poverty in a new land.
                     Even worse still, many were exiled for their religion or political beliefs and forced into
-                    a life of servitude or slavery.</p>
+                    a life of servitude or slavery. Less than a century ago, an Irish person leaving their native country
+                    would be assumed to never set foot on it again.</p>
                 <br>
-                <p>Often Irish communities abroad were treated with disdain and discrimination. Therefore, it's important to 
-                    to consider the circumstances which led to the making of a some of our featured forgotten friends.
-                </p>
+                <p>Today the Irish are broadly welcomed around the world, but often Irish communities abroad were treated 
+                    with disdain and discrimination. Therefore, it's important to consider the circumstances which led to 
+                    the making of a some of our featured forgotten friends.</p>
             </div>
             <img src="assets/images/no_irish.jpg" alt="">
         </section>
 
-        <section class="container-two">
+        <section class="container-two-events">
+            <img src="assets/images/Global-Irish-Diaspora-Map.jpg" alt="">
+            <div id="container-two-events-text">
+                <p>With the most remote Irish pubs not being in Donegal, the Kerry mountains or Aran Islands,
+                    but in the Himalayas, Patagonia, Mongolia and the Andes... it's clear to see how far Irish feet have
+                    travelled.</p>
+            </div>
+        </section>
 
+        <section class="container-table">
+            <p>However, there are a number of countries in which the Irish mainly settled, either by choice, necessity or by force.
+                The principle locations and events that caused the migrations were as follows:
+            </p>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Cause</th>
+                        <th>Period</th>
+                        <th>Destination</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Cromwellian Conquest: Indentured Servitude & Slavery</td>
+                        <td>1649-1653</td>
+                        <td>The Carribbean, North America</td>
+                    </tr>
+                    <tr>
+                        <td>Penal Colonies</td>
+                        <td>1788-1868</td>
+                        <td>Australia</td>
+                    </tr>
+                    <tr>
+                        <td>Napoleonic Wars</td>
+                        <td>1803-1815</td>
+                        <td>Europe</td>
+                    </tr>
+                    <tr>
+                        <td>South American Revolutions</td>
+                        <td>1810-1829</td>
+                        <td>Argentina, Uruguay, Chile, Brazil</td>
+                    </tr>
+                    <tr>
+                        <td>The Great Famine</td>
+                        <td>1845-1852</td>
+                        <td>Britain, USA, Canada</td>
+                    </tr>
+                    <tr>
+                        <td>The Boer Wars, Mining Opportunities</td>
+                        <td>1880-1902</td>
+                        <td>South Africa</td>
+                    </tr>
+                    <tr>
+                        <td>Irish Economy</td>
+                        <td>1950-1970, 1980-1990</td>
+                        <td>Britain, North America</td>
+                    </tr>
+                    <tr>
+                        <td>Global Recession</td>
+                        <td>2008-2012</td>
+                        <td>Britain, Australia, New Zealand, North America</td>
+                    </tr>
+                </tbody>
+        </table>
         </section>
 
 
@@ -74,7 +139,7 @@
             <p>As a once gone and once returned Irish emigrant myself, I have found a fascination in the 
                 paths of other Irish across the globe and what brought them there.
                 With the most remote Irish pubs not being in Donegal, the Kerry mountains or Aran Islands,
-                but in the Himalayas, Patagonia, Mongolia, the Andes... it's clear to see how far Irish feet have
+                but in the Himalayas, Patagonia, Mongolia and the Andes... it's clear to see how far Irish feet have
                 travelled.
                 However, there are a number of countries in which the Irish mainly settled, either by choice, necessity or by force.
                 The principle locations and events that caused the migrations were as follows:</p>
