--- a/events.html
+++ b/events.html
@@ -41,15 +41,15 @@
                 <img src="assets/images/diasporaColor.svg" alt="A picture of the dark hedges in Northern Ireland">
             </div>
             <div class="banner-events-text">
-                <h4>There are 13 times as many people who identify as Irish as there are in Ireland.</h4>
+                <h4>13 times as many people identify as Irish abroad as there are in Ireland.</h4>
             </div>
         </section>
 
         <section class="container-one">
             <div>
-                <p>As a once gone and once returned emigrant myself, it is fascinating to hear the 
+                <!-- <p>As a once gone and once returned emigrant myself, it is fascinating to hear the 
                     paths of other Irish emigrants' experiences and what brought them there.</p>
-                <br>
+                <br> -->
                 <p>The vast majority of Irish emigrants today are young, well-educated and skilled people 
                     coming from an affluent country. They leave seeking opportunity, adventure or education abroad.
                     With internet and travel accessibility now it's relative easy for emigrants to keep in touch
@@ -67,6 +67,10 @@
             </div>
             <img src="assets/images/no_irish.jpg" alt="">
         </section>
+
+        <hr class="hr-center">
+        <br>
+        <br>
 
         <section class="container-two-events">
             <img src="assets/images/Global-Irish-Diaspora-Map.jpg" alt="">
@@ -134,64 +138,13 @@
         </table>
         </section>
 
+        <br>
+        <hr class="hr-center">
+        <br>
 
-        <!--<div id="diaspora-text">
-            <p>As a once gone and once returned Irish emigrant myself, I have found a fascination in the 
-                paths of other Irish across the globe and what brought them there.
-                With the most remote Irish pubs not being in Donegal, the Kerry mountains or Aran Islands,
-                but in the Himalayas, Patagonia, Mongolia and the Andes... it's clear to see how far Irish feet have
-                travelled.
-                However, there are a number of countries in which the Irish mainly settled, either by choice, necessity or by force.
-                The principle locations and events that caused the migrations were as follows:</p>
-                <table>
-                    <tr>
-                        <th>Cause</th>
-                        <th>Period</th>
-                        <th>Destination</th>
-                    </tr>
-                    <tr>
-                        <td>Cromwellian Conquest: Indentured Servitude & Slavery</td>
-                        <td>1649-1653</td>
-                        <td>The Carribbean, North America</td>
-                    </tr>
-                    <tr>
-                        <td>Penal Colonies</td>
-                        <td>1788-1868</td>
-                        <td>Australia</td>
-                    </tr>
-                    <tr>
-                        <td>Napoleonic Wars</td>
-                        <td>1803-1815</td>
-                        <td>Europe</td>
-                    </tr>
-                    <tr>
-                        <td>South American Revolutions</td>
-                        <td>1810-1829</td>
-                        <td>Argentina, Uruguay, Chile, Brazil</td>
-                    </tr>
-                    <tr>
-                        <td>The Great Famine</td>
-                        <td>1845-1852</td>
-                        <td>Britain, USA, Canada</td>
-                    </tr>
-                    <tr>
-                        <td>The Boer Wars, Mining Opportunities</td>
-                        <td>1880-1902</td>
-                        <td>South Africa</td>
-                    </tr>
-                    <tr>
-                        <td>Irish Economy</td>
-                        <td>1950-1970, 1980-1990</td>
-                        <td>Britain, North America</td>
-                    </tr>
-                    <tr>
-                        <td>Global Recession</td>
-                        <td>2008-2012</td>
-                        <td>Britain, Australia, New Zealand, North America</td>
-                    </tr>
-            </table>
+        <section class="container-three">
+            <h2>Today</h2>
             <br>
-            <h3>Today</h3>
             <p>
                 Over the last decade there has been a steady flow of Irish emigrants all across
                 the globe.  However in recent times, the reasons for leaving have changed from economic necessity to include better and
@@ -199,7 +152,62 @@
                 In addition to the above countries, today many Irish people are deciding to settle in the Middle-East, South-East Asia and the Mediterranean.
                 Times may have changed, but Éire Dubh will still always have articles to write...
             </p>
-        </div>-->
-</body>
+        </section>
+
+        <section class="people-links">
+            <div class="card">
+                <div class="card-image card1"></div>
+                <h2>Typhoid Mary</h2>
+                <p>The seemingly innocuous cook in New York who carried a deadly secret...</p>
+                <a href="#">Read more</a>
+            </div>
+            <div class="card">
+                <div class="card-image card2"></div>
+                <h2>James Jameson</h2>
+                <p>The adventurer, artist and whiskey heir with a dark curiosity for cannibalism...</p>
+                <a href="#">Read more</a>
+            </div>
+            <div class="card">
+                <div class="card-image card3"></div>
+                <h2>Andrew Stoney</h2>
+                <p>Aristocrat, politician, lawman, adventurer, playboy, conman and killer.</p>
+                <a href="#">Read more</a>
+            </div>
+        </section>
+
+        <footer>
+            <div class="socials">
+                <ul>
+                    <li>
+                        <a href="https://facebook.com" target="_blank" rel="noopener">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="https://instagram.com" target="_blank" rel="noopener">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="https://twitter.com" target="_blank" rel="noopener">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="https://pinterest.com" target="_blank" rel="noopener">
+                            <i class="fa-brands fa-pinterest-p"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+
+    <script src="https://kit.fontawesome.com/67367d875b.js" crossorigin="anonymous"></script>
 
 </html>
