Bugs with all pages responsiveness

--- a/people.html
+++ b/people.html
@@ -34,9 +34,8 @@
         </label>
     </nav>
 
-    <section>
-        <div class="banner-people">
-            <img src="assets/images/freney2.jpg" alt="A picture of the dark hedges in Northern Ireland">
+    <section class="banner-people">
+        <div class="banner-people-image">
         </div>
     </section>
     
