Edit banner ratios to vh for responsiveness

--- a/people.html
+++ b/people.html
@@ -34,8 +34,9 @@
         </label>
     </nav>
 
-    <section class="banner-people">
-        <div class="banner-people-image">
+    <section>
+        <div class="banner-people">
+            <img src="assets/images/freney2.jpg" alt="">
         </div>
     </section>
     
@@ -43,7 +44,7 @@
     <section></section>
     <section></section>
     <section></section>
-    <footer>Footer</footer>
+    <!-- <footer>Footer</footer> -->
     
     <script src="https://kit.fontawesome.com/67367d875b.js" crossorigin="anonymous"></script>
 
