Bugs all pages, restart all styling for mobile first layout

--- a/events.html
+++ b/events.html
@@ -37,7 +37,7 @@
         </nav>
 
         <section>
-            <div class="banner-events">
+            <div class="banner">
                 <img src="assets/images/diasporaColor.svg" alt="A picture of the dark hedges in Northern Ireland">
             </div>
             <div class="banner-events-text">
