Style index.html for mobile

--- a/events.html
+++ b/events.html
@@ -36,16 +36,16 @@
             </label>
         </nav>
 
-        <section>
-            <div class="banner">
-                <img src="assets/images/diasporaColor.svg" alt="A picture of the dark hedges in Northern Ireland">
+        <header class="header">
+            <div class="header-image-events">
+                <!-- <img src="assets/images/diasporaColor.svg" alt="A picture of the dark hedges in Northern Ireland"> -->
             </div>
-            <div class="banner-events-text">
+            <div class="header-text" id="map-text">
                 <h4>13 times as many people identify as Irish abroad as there are in Ireland.</h4>
             </div>
-        </section>
+        </header>
 
-        <section class="container-one">
+        <section class="container">
             <div>
                 <!-- <p>As a once gone and once returned emigrant myself, it is fascinating to hear the 
                     paths of other Irish emigrants' experiences and what brought them there.</p>
@@ -95,6 +95,11 @@
                 </thead>
                 <tbody>
                     <tr>
+                        <td>Flight of the Earls, political exile</td>
+                        <td>1607-1803</td>
+                        <td>Spain, France, Europe, Spanish America</td>
+                    </tr>
+                    <tr>
                         <td>Cromwellian Conquest: Indentured Servitude & Slavery</td>
                         <td>1649-1653</td>
                         <td>The Carribbean, North America</td>
@@ -107,7 +112,7 @@
                     <tr>
                         <td>Napoleonic Wars</td>
                         <td>1803-1815</td>
-                        <td>Europe</td>
+                        <td>Europe, South America</td>
                     </tr>
                     <tr>
                         <td>South American Revolutions</td>
