--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
             </label>
         </nav>
 
-        <section>
-            <div class="banner">
-                <img src="assets/images/darkhedges.jpg" alt="A picture of the dark hedges in Northern Ireland">
+        <header class="header">
+            <div class="header-image">
+                <!-- <img src="assets/images/darkhedges.jpg" alt="A picture of the dark hedges in Northern Ireland"> -->
             </div>
-            <div class="banner-text">
+            <div class="header-text">
                 <h3>Not all those who wander...</h3>
             </div>
-        </section>
+        </header>
 
-        <section class="container-one">
+        <section class="container" id="about">
             <div id="about-text">
                 <h2 style="text-align: center;">About</h2>
                 <br>
@@ -64,17 +64,17 @@
             </div>
             <div>
                 <img src="assets/images/billythekid.png" alt="A wanted poster of Billy The Kid">
-            </div>
-            
+            </div> 
         </section>
 
-        <section class="container-two">
+        <hr class="hr-center">
+
+        <section class="container" id="diaspora">
+            <h2 style="text-align: center;">The Diaspora</h2>
             <div>
                 <img src="assets/images/irishMigrationMap1.jpg" alt="">
             </div>
             <div id="diaspora-text">
-                <h2 style="text-align: center;">The Diaspora</h2>
-                <hr>
                 <p>A small island with a big footprint.</p>
                 <br>
                 <p> From Tipperary to Timbuktu, the Irish are all over.
