--- a/people.html
+++ b/people.html
@@ -34,11 +34,11 @@
         </label>
     </nav>
 
-    <section>
-        <div class="banner">
+    <header>
+        <div class="header">
             <img src="assets/images/freney2.jpg" alt="">
         </div>
-    </section>
+    </header>
     
     <section class="container-one">
         <div id="mary-text">
