Delete all styles, retain all functional elements

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </nav>
 
         <header class="header">
-            <div class="header-image">
+            <div id="header-image">
                 <!-- <img src="assets/images/darkhedges.jpg" alt="A picture of the dark hedges in Northern Ireland"> -->
             </div>
             <div class="header-text">
@@ -106,6 +106,10 @@
                 <p>Aristocrat, politician, lawman, adventurer, playboy, conman and killer.</p>
                 <a href="#">Read more</a>
             </div>
+        </section>
+
+        <section>
+
         </section>
 
         <footer>
