--- a/people.html
+++ b/people.html
@@ -34,19 +34,20 @@
         </label>
     </nav>
 
-    <header>
-        <div class="header">
-            <img src="assets/images/freney2.jpg" alt="">
+    <header class="header">
+        <div id="header-image-people">
         </div>
     </header>
     
-    <section class="container-one">
+    <section class="container" id="about">
         <div id="mary-text">
-           <p>Mary Mallon (September 23, 1869 – November 11, 1938), commonly known as Typhoid Mary, was an Irish-born American cook believed to have infected between 51 to 122 people with typhoid fever. The infections caused three confirmed deaths, with unconfirmed estimates of up to 50. She was the first person in the United States identified as an asymptomatic carrier of the pathogenic bacteria Salmonella typhi.[1][2] She persisted in working as a cook and thereby exposed others to the disease. Because of that, she was twice forcibly quarantined by authorities, eventually for the final two decades of her life. Mallon died after a total of nearly 30 years in isolation.[3][4] Her popular nickname has since gained currency as a term for persons who spread disease or other misfortune, not always aware that they are doing so. </p>
+           <p>Mary Mallon (23/09/1869 - 11/11/1938), commonly known as Typhoid Mary, was an Irish-born American cook
+             believed to have infected between 51 to 122 people with typhoid fever. 
+             The infections caused three confirmed deaths, with unconfirmed estimates of up to 50. As an asymptomatic carrier, 
+             she persisted in working as a cook and thereby exposed others to the disease. As sadly innocent as it may seem so far,
+             the story has a malicious side.</p>
         </div>
-        <div id="mary-image">
-            <img src="assets/images/Typhoid_Mary.jpg" alt="">
-        </div>
+        <div id="mary-image"></div>
     </section>
     <section>Story</section>
     <section>Another story</section>
