Add utility classes for sections

--- a/index.html
+++ b/index.html
@@ -37,15 +37,37 @@
         </nav>
 
         <header class="header">
-            <div id="header-image">
-                <!-- <img src="assets/images/darkhedges.jpg" alt="A picture of the dark hedges in Northern Ireland"> -->
-            </div>
-            <div class="header-text">
+            <div id="header-image"></div>
+            <div id="header-text">
                 <h3>Not all those who wander...</h3>
             </div>
         </header>
 
-        <section class="container" id="about">
+        <section style="background-color: orange;">
+            <h2 class="text-center">About</h2>
+            <div class="split">
+                <div>
+                    <p>Forget Saint Brendan and Joe Biden. Never mind Maureen O'Hara and Barak O'Bama.</p>
+                    <p><span style="font-style: italic;">Éire Dubh</span> looks at obscure figures and events of the Irish diaspora 
+                        that maybe weren't much to write home about.</p>
+                </div>
+                <div>
+                    <p>As we tend to laud the many successful and famous emigrants, and often attempting to lay claim on those with tenuous connections 
+                        to our tiny island, many notable people and events abroad have gone under the radar. The phrase <span style="font-style: italic;">"Ah sure, we export all our best stuff!"</span>
+                        isn't so true as not all those who wandered abroad brought <span style="font-style: italic;">craic agus ceol</span>.</p>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="split">
+
+            </div>
+        </section>
+
+
+
+        <!-- <section class="container" id="about">
             <div id="about-text">
                 <h2 style="text-align: center;">About</h2>
                 <br>
@@ -53,7 +75,7 @@
                 <br>
                 <p>Forget Saint Brendan and Joe Biden.</p>
                 <p>Never mind Maureen O'Hara and Barak O'Bama.</p>
-                <p><span style="font-style: italic;"><span style="color: green;">É</span>ire <span style="color:#FFA500">D</span>ubh</span> looks at obscure figures and events of the Irish diaspora 
+                <p><span style="font-style: italic;">Éire Dubh</span> looks at obscure figures and events of the Irish diaspora 
                     that maybe weren't much to write home about.</p>
                 <br>
                 <p>As we tend to laud the many successful and famous emigrants, and often attempting to lay claim on those with tenuous connections 
@@ -61,13 +83,10 @@
                     isn't so true as not all those who wandered abroad brought <span style="font-style: italic;">craic agus ceol</span>.</p>
                 <br>
                 <p>So for better or for worse, we bring you a collection of histories from the <span style="font-style: italic;">down-trodden</span> and <span style="font-style: italic;">dark</span> to down-right <span style="font-style: italic;">dispicable</span> diaspora of Ireland.</p>
-            </div>
-            <div>
-                <img src="assets/images/billythekid.png" alt="A wanted poster of Billy The Kid">
             </div> 
-        </section>
+        </section> -->
 
-        <hr class="hr-center">
+        <!-- <hr class="hr-center">
 
         <section class="container" id="diaspora">
             <h2 style="text-align: center;">The Diaspora</h2>
@@ -106,7 +125,7 @@
                 <p>Aristocrat, politician, lawman, adventurer, playboy, conman and killer.</p>
                 <a href="#">Read more</a>
             </div>
-        </section>
+        </section> -->
 
         <section>
 
