--- a/people.html
+++ b/people.html
@@ -35,19 +35,19 @@
     </nav>
 
     <header class="header">
-        <div id="header-image-people">
+        <div id="header-image">
         </div>
     </header>
     
-    <section class="container" id="about">
-        <div id="mary-text">
+    <section>
+        <div>
            <p>Mary Mallon (23/09/1869 - 11/11/1938), commonly known as Typhoid Mary, was an Irish-born American cook
              believed to have infected between 51 to 122 people with typhoid fever. 
              The infections caused three confirmed deaths, with unconfirmed estimates of up to 50. As an asymptomatic carrier, 
              she persisted in working as a cook and thereby exposed others to the disease. As sadly innocent as it may seem so far,
              the story has a malicious side.</p>
         </div>
-        <div id="mary-image"></div>
+        <div></div>
     </section>
     <section>Story</section>
     <section>Another story</section>
