Add container templates, margins and padding for reuse

--- a/index.html
+++ b/index.html
@@ -44,50 +44,43 @@
         </header>
 
         <section style="background-color: orange;">
-            <h2 class="text-center">About</h2>
-            <div class="split">
-                <div>
-                    <p>Forget Saint Brendan and Joe Biden. Never mind Maureen O'Hara and Barak O'Bama.</p>
-                    <p><span style="font-style: italic;">Éire Dubh</span> looks at obscure figures and events of the Irish diaspora 
-                        that maybe weren't much to write home about.</p>
-                </div>
-                <div>
-                    <p>As we tend to laud the many successful and famous emigrants, and often attempting to lay claim on those with tenuous connections 
-                        to our tiny island, many notable people and events abroad have gone under the radar. The phrase <span style="font-style: italic;">"Ah sure, we export all our best stuff!"</span>
-                        isn't so true as not all those who wandered abroad brought <span style="font-style: italic;">craic agus ceol</span>.</p>
+            <div class="container">
+                <h2 class="text-center">About</h2>
+                <div class="split">
+                    <div>
+                        <p>Forget Saint Brendan and Joe Biden. Never mind Maureen O'Hara and Barak O'Bama.</p>
+                        <p><span style="font-style: italic;">Éire Dubh</span> looks at obscure figures and events of the Irish diaspora
+                            that maybe weren't much to write home about.</p>
+                    </div>
+                    <div>
+                        <p>As we tend to laud the many successful and famous emigrants, and often attempting to lay claim on those with tenuous connections
+                            to our tiny island, many notable people and events abroad have gone under the radar. The phrase <span style="font-style: italic;">"Ah sure, we export all our best stuff!"</span>
+                            isn't so true as not all those who wandered abroad brought <span style="font-style: italic;">craic agus ceol</span>.</p>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section>
-            <div class="split">
-
+        <section style="background-color: green;">
+            <div class="container">
+                <div class="split">
+                    <div>
+                        <img src="assets/images/freney2.jpg" alt="">
+                    </div>
+                    <div>
+                        <h2 class="text-center">Nature or Nurture?</h2>
+                        <p>It would be unwise to avoid speaking about the external factors that would have played a large
+                            role in the making of notoriety. So, we have a look at the Irish diaspora today and events that caused such large exoduses.
+                            Check out the where, why and what lead to some infamous exports here.</p>
+                    </div>
+                </div>
             </div>
         </section>
 
 
 
-        <!-- <section class="container" id="about">
-            <div id="about-text">
-                <h2 style="text-align: center;">About</h2>
-                <br>
-                <hr>
-                <br>
-                <p>Forget Saint Brendan and Joe Biden.</p>
-                <p>Never mind Maureen O'Hara and Barak O'Bama.</p>
-                <p><span style="font-style: italic;">Éire Dubh</span> looks at obscure figures and events of the Irish diaspora 
-                    that maybe weren't much to write home about.</p>
-                <br>
-                <p>As we tend to laud the many successful and famous emigrants, and often attempting to lay claim on those with tenuous connections 
-                    to our tiny island, many notable people and events abroad have gone under the radar. The phrase <span style="font-style: italic;">"Ah sure, we export all our best stuff!"</span>
-                    isn't so true as not all those who wandered abroad brought <span style="font-style: italic;">craic agus ceol</span>.</p>
-                <br>
-                <p>So for better or for worse, we bring you a collection of histories from the <span style="font-style: italic;">down-trodden</span> and <span style="font-style: italic;">dark</span> to down-right <span style="font-style: italic;">dispicable</span> diaspora of Ireland.</p>
-            </div> 
-        </section> -->
-
-        <!-- <hr class="hr-center">
-
+       
+<!--
         <section class="container" id="diaspora">
             <h2 style="text-align: center;">The Diaspora</h2>
             <div>
@@ -104,7 +97,9 @@
                 <br>
                 <p>Check out the where, why and what lead to some infamous exports here.</p>
             </div>
-        </section>
+        </section> 
+
+    -->
 
         <section class="people-links">
             <div class="card">
@@ -125,11 +120,26 @@
                 <p>Aristocrat, politician, lawman, adventurer, playboy, conman and killer.</p>
                 <a href="#">Read more</a>
             </div>
-        </section> -->
-
-        <section>
-
         </section>
+
+        <section style="background-color: orange;">
+            <div class="container">
+                <h2 class="text-center">The Diaspora</h2>
+                <div class="split">
+                    <div>
+                        <p>A small island with a big footprint. From Tipperary to Timbuktu, the Irish are all over.</p>
+                        <p>The vast majority of Irish emigrants today are young, well-educated and skilled people 
+                            coming from an affluent country. They leave seeking opportunity, adventure or education abroad.
+                            With internet and travel accessibility now it's relative easy for emigrants to keep in touch
+                            with loved ones and to take trips home.</p>
+                    </div>
+                    <div>
+                        <img src="assets/images/irishMigrationMap1.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        
 
         <footer>
             <div class="socials">
