Replace events.html with places.html, clear all html files & replace with index.html format

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="links">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="people.html">People</a></li>
-                <li><a href="events.html">Events</a></li>
+                <li><a href="places.html">Places</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <label for="nav-toggle" class="burger-menu">
@@ -122,7 +122,7 @@
             </div>
         </section>
 
-        <section style="background-color: orange;">
+        <!-- <section style="background-color: orange;">
             <div class="container">
                 <h2 class="text-center">The Diaspora</h2>
                 <div class="split">
@@ -138,7 +138,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         
 
         <footer>
