Add places.html containers, text & imgs

--- a/index.html
+++ b/index.html
@@ -43,15 +43,20 @@
             </div>
         </header>
 
-        <section style="background-color: orange;">
+        <hr>
+
+        <section>
             <div class="container">
                 <h2 class="text-center">About</h2>
+                <hr class="hr-center">
+                <br>
                 <div class="split">
                     <div>
                         <p>Forget Saint Brendan and Joe Biden. Never mind Maureen O'Hara and Barak O'Bama.</p>
                         <p><span style="font-style: italic;">Éire Dubh</span> looks at obscure figures and events of the Irish diaspora
                             that maybe weren't much to write home about.</p>
                     </div>
+                    <br>
                     <div>
                         <p>As we tend to laud the many successful and famous emigrants, and often attempting to lay claim on those with tenuous connections
                             to our tiny island, many notable people and events abroad have gone under the radar. The phrase <span style="font-style: italic;">"Ah sure, we export all our best stuff!"</span>
@@ -61,7 +66,9 @@
             </div>
         </section>
 
-        <section style="background-color: green;">
+        <hr class="hr-center">
+
+        <section>
             <div class="container">
                 <div class="split">
                     <div>
