--- a/places.html
+++ b/places.html
@@ -45,17 +45,20 @@
 
         <section style="background-color: orange;">
             <div class="container">
-                <h2 class="text-center">About</h2>
                 <div class="split">
                     <div>
-                        <p>Forget Saint Brendan and Joe Biden. Never mind Maureen O'Hara and Barak O'Bama.</p>
-                        <p><span style="font-style: italic;">Éire Dubh</span> looks at obscure figures and events of the Irish diaspora
-                            that maybe weren't much to write home about.</p>
+                        <p>A small island with a big footprint.</p>
+                        <p>From Tipperary to Timbuktu, Mayo to Machu Pichu, the Irish are all over. It is estimated that up to 80 million
+                            people worldwide claim Irish heritage, making it one of the largest diasporas in the world. Even more astonishingly
+                            is the fact that those this diaspora dwarves Ireland itself being 13 times larger than the population on the island itself.
+                        </p>
                     </div>
+                    <br>
                     <div>
-                        <p>As we tend to laud the many successful and famous emigrants, and often attempting to lay claim on those with tenuous connections
-                            to our tiny island, many notable people and events abroad have gone under the radar. The phrase <span style="font-style: italic;">"Ah sure, we export all our best stuff!"</span>
-                            isn't so true as not all those who wandered abroad brought <span style="font-style: italic;">craic agus ceol</span>.</p>
+                        <p>The vast majority of Irish emigrants today are young, well-educated and skilled people 
+                            coming from an affluent country. They leave seeking opportunity, adventure or education abroad.
+                            With internet and travel more accessible and cheap by the day, it's relatively easy for emigrants to keep in touch
+                            with loved ones and to take trips home.</p>
                     </div>
                 </div>
             </div>
@@ -65,41 +68,137 @@
             <div class="container">
                 <div class="split">
                     <div>
-                        <img src="assets/images/freney2.jpg" alt="">
+                        <img src="assets/images/famineShip.webp" alt="">
                     </div>
                     <div>
-                        <h2 class="text-center">Nature or Nurture?</h2>
-                        <p>It would be unwise to avoid speaking about the external factors that would have played a large
-                            role in the making of notoriety. So, we have a look at the Irish diaspora today and events that caused such large exoduses.
-                            Check out the where, why and what lead to some infamous exports here.</p>
+                        <p>However, this was not always the case as our ancestors did not have such privilages coming from
+                            extremely impoverished circumstances. Many went from poverty in Ireland to poverty in a new land.
+                            Even worse still, many were exiled for their religion or political beliefs and forced into
+                            a life of servitude or slavery. Less than a century ago, an Irish person leaving their native country
+                            would be assumed to never set foot on it again.</p>
                     </div>
                 </div>
             </div>
         </section>
 
-
-
-       
-<!--
-        <section class="container" id="diaspora">
-            <h2 style="text-align: center;">The Diaspora</h2>
-            <div>
-                <img src="assets/images/irishMigrationMap1.jpg" alt="">
+        <section>
+            <div class="container">
+                <div class="split">
+                    <div>
+                        <p>Today the Irish are broadly welcomed around the world, but often Irish communities abroad were treated 
+                            with disdain and discrimination. Many found themselves in segregated slums which lead to the formation of 
+                            organised crime gangs.</p>
+                        <p>Others, seeing their misfortunes, continued travelling and sought opportunity elsewhere.
+                            Therefore, it's important to consider the circumstances which led to the making of a some of our featured forgotten friends.</p>
+                    </div>
+                    <div>
+                        <img src="assets/images/no_irish.jpg" alt="">
+                    </div>
+                </div>
             </div>
-            <div id="diaspora-text">
-                <p>A small island with a big footprint.</p>
-                <br>
-                <p> From Tipperary to Timbuktu, the Irish are all over.
-                    So if asked at your next pub-quiz who the three astronauts on the first moon landing were,
-                    know that it was Neil Armstrong, Buzz Aldrin and...</p>
-                <p>...Michael Collins? No, not <span style="font-style: italic;">the</span> Michael Collins posthumously sent on a diplomatic mission by an aging Eamon de Valera,
-                but we'll claim him nonetheless!</p>
-                <br>
-                <p>Check out the where, why and what lead to some infamous exports here.</p>
-            </div>
-        </section> 
+        </section>
 
-    -->
+        <section style="background-color: green;">
+            <div class="container">
+                <div class="split">
+                    <div>
+                        <img src="assets/images/irishMigrationMap1.jpg" alt="">
+                    </div>
+                    <div>
+                        <p>With the most remote Irish pubs not being in Donegal, the Kerry mountains or Aran Islands,
+                            but in the Himalayas, Patagonia, Mongolia and the Andes... it's clear to see how far Irish feet have
+                            travelled.</p>
+                        <p>However, there are a number of countries in which the Irish mainly settled, either by choice, necessity or by force.
+                            Check out the table below to see events that caused the initial migrations and to where they went.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="container-table">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Cause</th>
+                                <th>Period</th>
+                                <th>Destination</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Flight of the Earls, political exile</td>
+                                <td>1607-1803</td>
+                                <td>Spain, France, Europe, Spanish America</td>
+                            </tr>
+                            <tr>
+                                <td>Cromwellian Conquest: Indentured Servitude & Slavery</td>
+                                <td>1649-1653</td>
+                                <td>The Carribbean, North America</td>
+                            </tr>
+                            <tr>
+                                <td>Penal Colonies</td>
+                                <td>1788-1868</td>
+                                <td>Australia</td>
+                            </tr>
+                            <tr>
+                                <td>Napoleonic Wars</td>
+                                <td>1803-1815</td>
+                                <td>Europe, South America</td>
+                            </tr>
+                            <tr>
+                                <td>South American Revolutions</td>
+                                <td>1810-1829</td>
+                                <td>Argentina, Uruguay, Chile, Brazil</td>
+                            </tr>
+                            <tr>
+                                <td>The Great Famine</td>
+                                <td>1845-1852</td>
+                                <td>Britain, USA, Canada</td>
+                            </tr>
+                            <tr>
+                                <td>The Boer Wars, Mining Opportunities</td>
+                                <td>1880-1902</td>
+                                <td>South Africa</td>
+                            </tr>
+                            <tr>
+                                <td>Irish Economy</td>
+                                <td>1950-1970, 1980-1990</td>
+                                <td>Britain, North America</td>
+                            </tr>
+                            <tr>
+                                <td>Global Recession</td>
+                                <td>2008-2012</td>
+                                <td>Britain, Australia, New Zealand, North America</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </section>
+
+        <section style="background-color: green;">
+            <div class="container">
+                <h2 class="text-center">Today</h2>
+                <hr class="hr-center">
+                <br>
+                <div class="split">
+                    <div>
+                        <img src="assets/images/Global-Irish-Diaspora-Map.jpg" alt="">
+                    </div>
+                    <div>
+                        <p>
+                            Over the last decade there has been a steady flow of Irish emigrants all across
+                            the globe.  However in recent times, the reasons for leaving have changed from economic necessity to include better and
+                            more varied opportunities abroad, the cost of living and housing crisis in Ireland, chance to acrue wealth, adventure and a retirement in the sun.
+                            In addition to the above countries, today many Irish people are deciding to settle in the Middle-East, South-East Asia and the Mediterranean.
+                            Times may have changed, but Éire Dubh will still always have articles to write...
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section class="people-links">
             <div class="card">
